# distillforge

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile.control-plane  Dockerfile.proxy  README.en.md  README.fr.md  README.md  STUDENT_REPORT.md  brandbook.html  requirements-training.txt  specs.md
config/: example.yaml  routing_snapshot.json
deploy/kubernetes/: distillforge.yaml
docs/: INSTALLATION.fr.md  INSTALLATION.md
examples/cfpb_complaints/: README.md  config.local_llm.yaml  routing_snapshot.local_llm.json
examples/groq_banking77/: README.md  config.local_10k.yaml  config.local_llm.yaml  config.volume.yaml  config.yaml  routing_snapshot.local_llm.json
landing/: README.md  _headers  index.html  netlify.toml  wrangler.jsonc
src/: config.rs  feedback.rs  lib.rs  log_writer.rs  main.rs  metrics.rs  rate_limit.rs  routing.rs  shadow_log.rs
tools/: banking77_demo.py  build_dataset.py  cfpb_demo.py  control_plane.py  drift_guard.py  export_llm_sft.py  finops_dashboard.py  finops_report.py  groq_teacher.py  local_banking_teacher.py  local_llm_banking_teacher.py  local_llm_label_teacher.py  promote_model.py  retention.py  shadow_report.py  student_inference.py  synthetic_data.py  train_student.py
